<resources>

    <!-- Manifest -->

    <string name="app_name" translatable="false">Psiaki</string>
    <string name="title_activity_firebase_testing" translatable="false">Firebase testing</string>
    <!--<string name="title_activity_main_old">MainActivityOLD</string>-->

    <!-- Main UI -->

    <string name="navigation_drawer_open">Otwórz</string>
    <string name="navigation_drawer_close">Zamknij</string>
    <string name="no_more_results">Nie ma więcej wyników</string>
    <string name="no_network_connection">Brak połączenia z internetem</string>
    <string name="network_connection_disabled">Network connection disabled</string>


    <!--Content main UI-->

    <string name="no_dogs_found">Wygląda na to, że zabrakło nam psiaków. Spróbuj zmienić miejsce wyszukiwania...</string>
    <string name="ups">Ups!</string>

    <!-- Menu UI -->

    <string name="firebaseTest">Firebase test</string>
    <string name="settings">Ustawienia</string>
    <string name="about">O nas</string>
    <string name="favourites">Ulubione</string>
    <string name="homepage">Główna</string>
    <string name="shelters">Schroniska</string>

    <!-- Firebase UI -->

    <string name="dog_name_hint">Imię</string>
    <string name="dog_gender_hint">Płeć</string>
    <string name="dog_age_hint">Wiek</string>
    <string name="dog_description_hint">Opis</string>
    <string name="dog_size_hint">Rozmiar</string>
    <string name="dog_weight_hint">Waga</string>
    <string name="dog_location_hint">Lokalizacja</string>
    <string name="dog_attitude_people_hint">Stosunek do ludzi</string>
    <string name="dog_attitude_dogs_hint">Stosunek do psów</string>
    <string name="dog_attitude_cats_hint">Stosunek do kotów</string>
    <string name="dog_keeper_name_hint">Imię opiekuna</string>
    <string name="dog_keeper_mail_hint">Mail opiekuna</string>
    <string name="dog_keeper_phone_hint">Telefon opiekuna</string>
    <string name="dog_vaccinated_hint">Szczepiony</string>
    <string name="dog_dewormed_hint">Odrobaczony</string>
    <string name="dog_sterilized_hint">Wysterylizowany</string>
    <string name="dog_homeless_since_hint">Bezdomy od</string>
    <string name="show_all_dogs">Pokaż wszystkie</string>
    <string name="add_new_dog">Dodaj zwierzę</string>
    <string name="refresh">Odśwież</string>

    <!-- About us -->

    <string name="about_lead">LEAD LEAD LEAD LEAD LEAD lorem ipsum lorem ipsum lorem ipsum lorem</string>
    <string name="about_description">Description description Description description description description description Description description description description description description description description description description description description description Description description description description description description description Description description description description description description description Description description description description description description description</string>
    <string name="content_description">Logo_image_description</string>

    <!-- Additional - need to be verified -->

    <string name="dog_category">Kategoria</string>
    <string name="dog_description">Opis</string>
    <string name="rate">Oceń aplikację</string>
    <string name="sample_text">Json do wyplucia</string>
    <string name="info_no_data">Brak danych</string>
    <string name="title_activity_main_old" translatable="false">MainActivityOLD</string>
    <string name="title_activity_favourite" translatable="false">FavouriteActivity</string>

    <!-- Values For Tab Layout In Favourite Screen -->

    <string name="tab_dogs" translatable="false">Psy</string>
    <string name="tab_cats" translatable="false">Koty</string>
    <string name="tab_others" translatable="false">Inne</string>
    <string name="dog_name" translatable="false">Imię zwierzaka</string>
    <string name="rate_please_message" translatable="false">Prosimy o ocenę aplikacji. \n Twój feedback pomaga ją rozwijać.\n Dzięki za pomoc!</string>
    <string name="ok" translatable="false">Okej!</string>
    <string name="questionForRating" translatable="false">Jak oceniasz aplikację?</string>
    <string name="sort" translatable="false">sort</string>

    <string name="another_time" translatable="false">Innym razem</string>
    <string name="rate_title" translatable="false">Oceń Psiaki</string>
    <string name="rating_0" translatable="false">Tragiczna</string>
    <string name="rating_1" translatable="false">Słaba</string>
    <string name="rating_2" translatable="false">W porządku</string>
    <string name="rating_4" translatable="false">Daje radę</string>
    <string name="rating_3" translatable="false">Świetna!</string>

    <!-- Values For tools design purposes only-->
    <string name="aboutus_title" translatable="false">Krótka historia powstania aplikacji \"Psiak\"</string>
    <string name="aboutus_description_first" translatable="false">Aplikacja została wykonana przez grupę wrażliwych na los zwierząt entuzjastów, którzy spotkali się w projekcie "Google Developer Nanodegree Scholarship". Naszym celem było stworzenie programu, który pomógłby schroniskom w znalezieniu domów bezdomnym kotom i psom. Postanowiliśmy zebrać w jednym miejscu informacje o schroniskach i zwierzętach, które tam przebywają, zwiększając ich szanse na dom. </string>
    <string name="aboutus_description_sec" translatable="false">Aplikacja umożliwia przeglądanie oraz archiwizowanie zdjęć i opisów zwierząt znajdujących się pod opieką schronisk z różnych stron Polski. Potencjalni opiekunowie mogą tutaj znaleźć informacje na temat miejsca pobytu zwierzaka, jego wieku, stosunku do innych zwierząt, dzieci itp. Natomiast schroniska mogą wprowadzać i uzupełniać dane dotyczące swoich podopiecznych.</string>
    <string name="aboutus_description_last" translatable="false">Wierzymy, że nasza aplikacja przyniesie radość ludziom i zwierzętom!</string>

    <!--Preferences-->
    <string name="choose_animal">Domyślny gatunek</string>
    <string name="choose_animal_summary">Jakie zwierzęta mają być domyślnie wyświetlane</string>
    <string name="choose">Wybierz</string>
    <string name="shelter">Schronisko</string>
    <string name="choose_shelter">Wybierz schronisko</string>
    <string name="animal_preference_key" translatable="false">animal_preference</string>
    <string name="shelter_preference_key" translatable="false">shelter_preference</string>
    <string name="animal_default_value" translatable="false">Psy</string>
    <string name="shelter_default_value" translatable="false">Warszawa</string>

    <!--Images descriptions-->
    <string name="image_view_animal_profile" translatable="false">imageAnimalProfile</string>
    <string name="tv_description" translatable="false">Description</string>
    <string name="tinder_card_image" translatable="false">tinderCardImageDescription</string>
    <string name="tinder_swipe_in_image" translatable="false">tinderInImageDescription</string>
    <string name="tinder_swipe_out_image" translatable="false">tinderOutImageDescription</string>

    <string name="title_activity_shelters" translatable="false">Schroniska</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_shelter_detail" translatable="false">Schronisko</string>
    <string name="phone_label" translatable="false">telefon</string>
    <string name="shelter_info_header" translatable="false">O schronisku</string>
    <string name="phone_label_text" translatable="false">Telefon</string>
    <string name="address_label_string" translatable="false">Adres</string>
    <string name="mock_shelter_description" translatable="false">Do najważniejszych zadań Schroniska należy: Przyjmowanie i przetrzymywanie zwierząt zagubionych, zabłąkanych i porzuconych lub z innych przyczyn bezdomnych, a w szczególności psów, kotów, a także innych zwierząt, które w wyniku zdarzeń losowych nie są zdolne samodzielnie egzystować. Poszukiwanie nowych domów dla zwierząt porzuconych, bezdomnych lub tych, które nie są w stanie przeżyć na wolności lub którym wypuszczenie na wolność może przysporzyć cierpień oraz przekazywanie zwierząt osobom zainteresowanym ich posiadaniem, zdolnym zapewnić im należyte warunki bytowania. Leczenie chorych zwierząt przebywających w Schronisku, rokujących nadzieję na wyzdrowienie. Informujemy, że z dniem 1.12.2014  w gabinecie Schroniska mieszkańcy Szczecina mogą bezpłatnie zaczipować swojego psa. Nie świadczymy żadnych innych usług weterynaryjnych. Nasz gabinet obejmuje swoją opieką jedynie psy znajdujące się na stanie Schroniska.</string>
    <string name="text_view_tv_description" translatable="false">Description</string>
    <string name="shelter_list_item_image_view" translatable="false">Image</string>


</resources>
